<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_dark_black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="14sp"
        android:text="@string/adjust_delay_record_time_tip"/>

    <io.github.yedaxia.musicnote.view.TabButton
        android:id="@+id/btn_play_beat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:button="@drawable/ic_play_large" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:minHeight="50dp"
        android:text="@string/adjust_success"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:visibility="invisible" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjust_record_reason"
        android:layout_margin="@dimen/app_ms_margin"
        android:lineSpacingMultiplier="1.3"
        android:textSize="12sp"
        android:textColor="@color/text_gray"/>
</LinearLayout>