<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:id="@+id/layout_beat_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/app_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_beat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/app_xs_margin"
                android:button="@drawable/ic_sw_volume" />

            <RadioButton
                android:id="@+id/rb_beat_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_xs_margin"
                android:button="@drawable/ic_settings" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_adjust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/adjust_record"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_ms_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_music_note"
                android:gravity="center"
                android:text="= 120"
                android:textColor="@color/text_dark_black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_tune_and_beat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/app_ms_margin"
                android:text="1=C  4/4"
                android:textColor="@color/text_dark_black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_record_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_beat_setting"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="@dimen/app_padding"
        android:text="@string/record_headset_tip" />

    <io.github.yedaxia.musicnote.view.TabButton
        android:id="@+id/btn_record"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tv_record_tip"
        android:layout_centerHorizontal="true"
        android:button="@drawable/ic_record_on" />

    <TextView
        android:id="@+id/tv_first_adjust_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_record"
        android:gravity="center"
        android:padding="@dimen/app_padding"
        android:text="@string/first_record_adjust_tip"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_first_adjust_tip"
        android:foregroundGravity="bottom"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_above="@+id/bottom_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_control"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <io.github.yedaxia.musicnote.view.TrackGroupLayout
                    android:id="@+id/layout_tracks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                </io.github.yedaxia.musicnote.view.TrackGroupLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottom_line"
        layout="@layout/include_light_line"
        android:layout_width="match_parent"
        android:layout_height='@dimen/line_height'
        android:layout_above="@+id/layout_bottom_bar" />

    <RelativeLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_new_track"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_add_black"
            android:drawablePadding="@dimen/label_icon_padding"
            android:gravity="center"
            android:paddingLeft="@dimen/app_padding"
            android:paddingRight="@dimen/app_padding"
            android:text="@string/new_track"
            android:textColor="@color/text_dark_black"
            android:textSize="12dp" />

        <io.github.yedaxia.musicnote.view.TabButton
            android:id="@+id/btn_play"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btn_skip_begin"
            android:button="@drawable/ic_play" />


        <io.github.yedaxia.musicnote.view.TabButton
            android:id="@+id/btn_skip_begin"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btn_loop"
            android:button="@drawable/ic_skip_begin" />

        <io.github.yedaxia.musicnote.view.TabButton
            android:id="@+id/btn_loop"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:button="@drawable/ic_repeat_one" />
    </RelativeLayout>
</RelativeLayout>